fix next alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ body{
 }
 .navigation .prev{width: 45%; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; color: var(--primary-font-color); font-weight: 600; padding: 5px 10px;}
 .navigation .next{width: 45%; color: var(--primary-font-color); overflow: hidden; white-space: nowrap; text-overflow: ellipsis; font-weight: 600; text-align: right; padding: 5px 10px;}
+.navigation .next.next-only{width: 100%;}
 
 .pagination{
   width: 100%; 
